infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-space
---
apiVersion: v1
kind: Namespace
metadata:
  name: database-space
